OpenVi 7.0.15 -> OpenVi 7.0.16-dev: Fri Feb 25 05:45:22 2022
        + Fix problem with autoindenting and ^^D input; patch from nvi 1.8x
        + Fix to reset screen offset of top line exceeding number of screens
          adapted from Sven Verdoolaege's nvi 1.8x patch
        + Fix tty from ex-mode on `q` when there are multiple screens; patch
          from Al Viro via nvi 1.8x; also minor redraw adjustments
        + Use `-Wall` by default for all builds; drop `-Wextra` for release
        + Switch default optimization level to `-Os` for release builds; use
          `-D_FORTIFY_SOURCE=2` for non-debugging builds by default as well
        + Do not warn about `ttyname` or `ioctl` failures for `stderr` unless
          `stderr` is a tty according to `isatty()`
        + Fix out of bounds access in file completion
        + Raise the maximum ex-script mmap size limit
        + `DEBUG=1` now defaults to `-O0` rather than `-Og`
        + Avoid undefined behavior in `vs_crel()` and `ex_is_abbrev()`
        + Suppress more warnings and potential warnings

OpenVi 7.0.12 -> OpenVi 7.0.15: Thu Feb 24 12:18:33 2022
        + Avoid O_PATH clash in source proper (rather than in awk script)
        + Remove deprecated interpreter internals documentation
        + Actually use `pledge()` for SerenityOS and OpenBSD 5.9 or later
        + Add `superstrip` (aka `sstrip`) `GNUmakefile` target to
          aggressively strip the compiled binary using `sstrip` if available
        + Add `upx` `GNUmakefile` target to compress the compiled binary
          using `upx` if available
        + Cosmetic clean-up of `GNUmakefile` and normalize to 79-columns
        + MSYS2 is also supported, tested with MSYS2 on Windows 11 (x86_64)
        + Add support for Cygwin, tested with Cygwin64 on Windows 11 (x86_64)
        + Update `README.md` to document usage for `LIBS` variable, correct
          `OPTFLAGS` to `OPTLEVEL`, expand external links and information,