@@ -55,14 +55,7 @@ ex_join(SCR *sp, EXCMD *cmdp)
          * The count for the join command was off-by-one,
          * historically, to other counts for other commands.
          */
-        if (FL_ISSET(cmdp->iflags, E_C_COUNT))
-                ++cmdp->addr2.lno;
-
-        /*
-         * If only a single address specified, or, the same address
-         * specified twice, the from/two addresses will be the same.
-         */
-        if (cmdp->addr1.lno == cmdp->addr2.lno)
+        if (F_ISSET(cmdp, E_ADDR_DEF) || cmdp->addrcnt == 1)
                 ++cmdp->addr2.lno;
 
         clen = tlen = 0;
